--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ p {
   padding: 20px 20px 12px;
   border-radius: 14px;
   margin: 20px;
+  box-shadow: 0 0 100px -40px #000000;
 }
 
 .white-text {
